# meok-x402-wrap-mcp

./: .gitignore  .mcp.json  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml  cosign-sign.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
meok_x402_wrap_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_server.py  test_x402_wrap.py
